Closed
Bug 1358755
Opened 8 years ago
Closed 8 years ago
Cannot save image by drag and drop to other than Finder/Desktop
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: desembrey, Assigned: spohl)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.23 KB,
patch
|
mstange
:
review+
gchang
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:53.0) Gecko/20100101 Firefox/53.0
Build ID: 20170413192749
Steps to reproduce:
1. Open Nightly
2. Open https://addons.cdn.mozilla.net/static/img/icons/firefox.png in current tab
3. Drag and drop the image to a third part file management tool (eg Forklift) rather than Desktop
Actual results:
The image can be dragged, but when dropped, nothing happens.
Expected results:
The image can be dragged, and when drop it, it's saved to desktop.
This is largely the issue in Bug 1325770 (thus I have largely copied the report), which appears to have been resolved only insofar as relates to interoperability with Finder either as the Desktop or the File Management tool. However, the issue remains with any other file management tool (eg. Forklift, Double Commander, Commander One)
Updated•8 years ago
|
Component: Untriaged → Drag and Drop
Product: Firefox → Core
Comment 1•8 years ago
|
||
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:55.0) Gecko/20100101 Firefox/55.0
I have tested this issue on Mac OS 10.12 x64 with the latest Firefox release (53.0) and the latest Nightly (55.0a1-20170425030221) and managed to reproduce it following the steps described in the description.
The image can be dragged and when dropped to a third part file management tool (eg Forklift), nothing happens.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•8 years ago
|
||
Works fine in 52 however, I would guess that this is almost certainly a regression from 1235162.
Flags: needinfo?(spohl.mozilla.bugs)
Keywords: regressionwindow-wanted
| Assignee | ||
Comment 3•8 years ago
|
||
Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Flags: needinfo?(spohl.mozilla.bugs)
Attachment #8867830 -
Flags: review?(mstange)
Updated•8 years ago
|
Attachment #8867830 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 4•8 years ago
|
||
[Tracking Requested - why for this release]:
Regression from bug 1235162.
status-firefox53:
--- → affected
status-firefox54:
--- → affected
status-firefox55:
--- → affected
tracking-firefox53:
--- → ?
tracking-firefox54:
--- → ?
tracking-firefox55:
--- → ?
Keywords: regressionwindow-wanted → regression
Comment 5•8 years ago
|
||
Regression in 53, the fix should probably be uplifted to beta54; tracking for 54/55.
Comment 6•8 years ago
|
||
Duplicate of bug 1330470?
Comment 7•8 years ago
|
||
If it isn't then the same idea applies, let's verify the fix on m-c and then try to uplift to 54.
| Assignee | ||
Comment 8•8 years ago
|
||
(In reply to Liz Henry (:lizzard) (needinfo? me) from comment #6)
> Duplicate of bug 1330470?
No, these are two separate problems with two separate patches.
| Assignee | ||
Comment 9•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/0c91cb327e453b6dfe8f4064ed1f71d594bdab5b
Bug 1358755: Fix dragging of files from Firefox to third-party file management applications on macOS. r=mstange
Comment 10•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 11•8 years ago
|
||
Please request uplift on this when you get a chance. Thanks!
Flags: needinfo?(spohl.mozilla.bugs)
| Assignee | ||
Comment 12•8 years ago
|
||
Comment on attachment 8867830 [details] [diff] [review]
Patch
Approval Request Comment
[Feature/Bug causing the regression]: bug 1235162
[User impact if declined]: When files (such as images) are being dragged from Firefox to third-party file management applications on OSX/macOS, they cannot be dropped like they used to and the drag will fail.
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: Yes, preferably. Steps in comment 0.
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: minimally
[Why is the change risky/not risky?]: This is a very small (2 loc) and well-understood change.
[String changes made/needed]: none
Flags: needinfo?(spohl.mozilla.bugs)
Attachment #8867830 -
Flags: approval-mozilla-aurora?
Comment 13•8 years ago
|
||
Comment on attachment 8867830 [details] [diff] [review]
Patch
moving uplift request from aurora to beta, since aurora is going away.
Attachment #8867830 -
Flags: approval-mozilla-aurora? → approval-mozilla-beta?
Updated•8 years ago
|
Flags: qe-verify+
Comment 14•8 years ago
|
||
Hi Emil,
Can you help check if this issue is fixed in the latest nightly?
Flags: needinfo?(emil.pasca)
Updated•8 years ago
|
status-firefox-esr52:
--- → unaffected
Comment 15•8 years ago
|
||
Comment on attachment 8867830 [details] [diff] [review]
Patch
Fix a regression about drag & drop. Beta54+. Should be in 54 beta 11.
Attachment #8867830 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 16•8 years ago
|
||
| bugherder uplift | ||
Reproduced the initial issue using affected build 54 beta 8 only on Windows and macOS and verified that it's fixed on Firefox 54 beta 11.
On Ubuntu 16.04 we could not reproduce the initial issue on affected build using Konqueror, Nautilus and Dolphin but we could verify it works using latest Firefox 54 beta 11.
Flags: qe-verify+
| Assignee | ||
Comment 18•8 years ago
|
||
Thanks for verifying. This was an issue on OSX only. Adding platform info to make this clear.
Flags: needinfo?(emil.pasca)
OS: Unspecified → Mac OS X
Hardware: Unspecified → All
You need to log in
before you can comment on or make changes to this bug.
Description
•