Bug 1358755 - Fix dragging of files from Firefox to third-party file management applications on macOS. r=mstange, a=gchang

--HG--
extra : source : 0c91cb327e453b6dfe8f4064ed1f71d594bdab5b